@@ -1,5 +1,5 @@
 /*
- * Copyright 2012 Google Inc. All Rights Reserved.
+ * Copyright 2012 The Error Prone Authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,7 +27,7 @@ public class NumericEqualityPositiveCases {
 
     // BUG: Diagnostic contains: !Objects.equals(x, y)
     retVal = (x != y);
-    final Integer constValue = new Integer(1000);
+    final Integer constValue = Integer.valueOf(1000);
 
     // BUG: Diagnostic contains: Objects.equals(x, constValue)
     retVal = (x == constValue);
@@ -46,7 +46,7 @@ public class NumericEqualityPositiveCases {
 
     // BUG: Diagnostic contains: !Objects.equals(x, y)
     retVal = (x != y);
-    final Long constValue = new Long(1000L);
+    final Long constValue = Long.valueOf(1000L);
 
     // BUG: Diagnostic contains: Objects.equals(x, constValue)
     retVal = (x == constValue);
@@ -65,7 +65,7 @@ public class NumericEqualityPositiveCases {
 
     // BUG: Diagnostic contains: !Objects.equals(x, y)
     retVal = (x != y);
-    final Number constValue = new Long(1000L);
+    final Number constValue = Long.valueOf(1000L);
 
     // BUG: Diagnostic contains: Objects.equals(x, constValue)
     retVal = (x == constValue);
